fix navbar not stretching to length of screen on Moto G4 screen sizes

--- a/src/components/Navigation/NavBar/NavBar.module.css
+++ b/src/components/Navigation/NavBar/NavBar.module.css
@@ -7,3 +7,9 @@
   justify-content: flex-end;
   height: 80px;
 }
+
+@media only screen and (max-width: 361px) {
+  .NavBar {
+    width: 110vw;
+  }
+}
